--- a/client/assets/scss/layout/_wizard.scss
+++ b/client/assets/scss/layout/_wizard.scss
@@ -1,3 +1,4 @@
 .wizard-view-pane {
   margin-top: 2rem;
+  overflow: auto !important;
 }
